z-index fix

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ transform: translateY(25%);
   border-radius:8px;
   width: auto;
   font-weight: normal;
-z-index: 1;
+  z-index: 1;
 }
 
 .herotxt h2{
@@ -891,7 +891,7 @@ transform: translateY(-50%);
    align-items: center;
    width: 100vw;
 
-   z-index: -1;
+   z-index: 2;
 
   }
 
@@ -915,7 +915,7 @@ transform: translateY(-50%);
 display: block;
 position: absolute;
 right: 9px;
-z-index: 1;
+z-index: 3;
 
 }
 
@@ -1009,6 +1009,7 @@ margin-left: 2vw;
 font-size:1.7rem;
 margin-bottom: 0px;
 font-weight: bold;
+z-index: 0;
 }
 
 .herotxt h2{
